<resources>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="Year">Y</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_feedback_email">违法/不良信息举报邮箱</string>
    <string name="about_us_feedback_phone">投诉/举报电话</string>
    <string name="about_us_icp">蜀ICP备19040505号-14A</string>
    <string name="about_us_join_us">加入我们</string>
    <string name="about_us_no_new_version">当前已是最新版本</string>
    <string name="about_us_upgrade_choose">选择更新方式</string>
    <string name="about_us_upgrade_failed">检查更新失败</string>
    <string name="about_us_version">当前版本</string>
    <string name="about_us_version_update">版本更新</string>
    <string name="ag_sdk_cbg_root">MIIFZDCCA0ygAwIBAgIIYsLLTehAXpYwDQYJKoZIhvcNAQELBQAwUDELMAkGA1UE BhMCQ04xDzANBgNVBAoMBkh1YXdlaTETMBEGA1UECwwKSHVhd2VpIENCRzEbMBkG A1UEAwwSSHVhd2VpIENCRyBSb290IENBMB4XDTE3MDgyMTEwNTYyN1oXDTQyMDgx NTEwNTYyN1owUDELMAkGA1UEBhMCQ04xDzANBgNVBAoMBkh1YXdlaTETMBEGA1UE CwwKSHVhd2VpIENCRzEbMBkGA1UEAwwSSHVhd2VpIENCRyBSb290IENBMIICIjAN BgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEA1OyKm3Ig/6eibB7Uz2o93UqGk2M7 84WdfF8mvffvu218d61G5M3Px54E3kefUTk5Ky1ywHvw7Rp9KDuYv7ktaHkk+yr5 9Ihseu3a7iM/C6SnMSGt+LfB/Bcob9Abw95EigXQ4yQddX9hbNrin3AwZw8wMjEI SYYDo5GuYDL0NbAiYg2Y5GpfYIqRzoi6GqDz+evLrsl20kJeCEPgJZN4Jg00Iq9k ++EKOZ5Jc/Zx22ZUgKpdwKABkvzshEgG6WWUPB+gosOiLv++inu/9blDpEzQZhjZ 9WVHpURHDK1YlCvubVAMhDpnbqNHZ0AxlPletdoyugrH/OLKl5inhMXNj3Re7Hl8 WsBWLUKp6sXFf0dvSFzqnr2jkhicS+K2IYZnjghC9cOBRO8fnkonh0EBt0evjUIK r5ClbCKioBX8JU+d4ldtWOpp2FlxeFTLreDJ5ZBU4//bQpTwYMt7gwMK+MO5Wtok Ux3UF98Z6GdUgbl6nBjBe82c7oIQXhHGHPnURQO7DDPgyVnNOnTPIkmiHJh/e3vk VhiZNHFCCLTip6GoJVrLxwb9i4q+d0thw4doxVJ5NB9OfDMV64/ybJgpf7m3Ld2y E0gsf1prrRlDFDXjlYyqqpf1l9Y0u3ctXo7UpXMgbyDEpUQhq3a7txZQO/17luTD oA6Tz1ADavvBwHkCAwEAAaNCMEAwDgYDVR0PAQH/BAQDAgEGMA8GA1UdEwEB/wQF MAMBAf8wHQYDVR0OBBYEFKrE03lH6G4ja+/wqWwicz16GWmhMA0GCSqGSIb3DQEB CwUAA4ICAQC1d3TMB+VHZdGrWJbfaBShFNiCTN/MceSHOpzBn6JumQP4N7mxCOwd RSsGKQxV2NPH7LTXWNhUvUw5Sek96FWx/+Oa7jsj3WNAVtmS3zKpCQ5iGb08WIRO cFnx3oUQ5rcO8r/lUk7Q2cN0E+rF4xsdQrH9k2cd3kAXZXBjfxfKPJTdPy1XnZR/ h8H5EwEK5DWjSzK1wKd3G/Fxdm3E23pcr4FZgdYdOlFSiqW2TJ3Qe6lF4GOKOOyd WHkpu54ieTsqoYcuMKnKMjT2SLNNgv9Gu5ipaG8Olz6g9C7Htp943lmK/1Vtnhgg pL3rDTsFX/+ehk7OtxuNzRMD9lXUtEfok7f8XB0dcL4ZjnEhDmp5QZqC1kMubHQt QnTauEiv0YkSGOwJAUZpK1PIff5GgxXYfaHfBC6Op4q02ppl5Q3URl7XIjYLjvs9 t4S9xPe8tb6416V2fe1dZ62vOXMMKHkZjVihh+IceYpJYHuyfKoYJyahLOQXZykG K5iPAEEtq3HPfMVF43RKHOwfhrAH5KwelUA/0EkcR4Gzth1MKEqojdnYNemkkSy7 aNPPT4LEm5R7sV6vG1CjwbgvQrWCgc4nMb8ngdfnVF7Ydqjqi9SAqUzIk4+Uf0ZY +6RY5IcHdCaiPaWIE1xURQ8B0DRUURsQwXdjZhgLN/DKJpCl5aCCxg==</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00CDD12911E4A9FEC39DB16C058AD280EB05B940E41754604AED3CE26C167EB00E9DA904733CA19AA03FC9CF96E8F0EF22C1125EA04C22F79DAE12A3926B6A94DB137EC147480D715E0280B704432D39B1</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00D72D95DC1168A09B8E6ACEFF04E3EF05E3D9F51E737810DB397D29E355B2BC3053069520B8F287890FC26CDD62129D854F48E9A61E995D6877D83ED49BB8187245CB7C57DA569A0D7BEA8E6FDAB997BB3CE2F5217A593E7DD0CCEF4672613A90</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">006D95D97D5E8E1AD7D4A7EC132E4802ECD42DA2396B9A8D1BC435B6E25BBE6DF152DD848BD0BCA39E0ED947447B54191C</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">7418040902DF265A5198A7B56C102585</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00624DD5F027B745B56C0D3D7E5B60950D386CE4876DD4E9F4CFF44BAAE04CBBE8</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">0097EA49D9E0964F2D4DCD80D95E93B4F981E3833B150D588FAD72E0EA1263015DF61EAE1DC3FC43AA1A7D5354B71B50D8</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00CF0CCAA42CB66493851091A237B0B45C07057DB137CA1FB15D7E06E7DCE0CDB841EA1DD3FEEA60FA0D7CE8924743E688C5AB5BB98DA597C462AF56D74F6EF5315A63A0ABFE117C5C45399DE244A6186CEDFE45BF9064B86FDCF7EB96068C21B0</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">009B133A47A2A8BF6180ABEAA0EA4A51009A6028ECAFC95F099D2D37BED44C0A5B</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">000CBA1A51DE9E5625E53563491E0963E70B6C05F3F147E4778BF2079FC9AA26E0AB84588E2B3C87D2CB57A7058765266D</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">007F11E8AAF4D697296AE3E0A15BBD728CE38DA436E2EFDD2BA0BF488B308BFDCE</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">0077F7A0EE09C615A9BAF3F9B4D2FBC0FD074CD1C60FB732672E796FE5A37459F2C0FC75D999BC6BE476D97CA181185311</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00FC554540574E998AC40D14C021D8845523798E5908815382B60308213D293DB8D4E49DAA38E6F87D78E724C8B2324055</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00C961F495348F3C74E7F581D613F998CDFA1E9989D45DFE3826CC38EA5A20F9E03989621F5D84A7A259FCE010A5843F09</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">005B34E1721D7BF4DC7FE9BB471378014BC75F38D9315448747DA6EFBBD5BFC375D1D4A575453A06CF2A5978A18376DFBB2C0DDCC15014554FAD0DDE7857C7714F8E3AA4DEB85CE94E2FAFE8F5797DF090073FAAB3E283CA18C297B33F2765714B</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00F5D223AF6AF65E43FE06CDFE95167CA4AABDF46570BA273A629E71C7FDF51A194839F2C4E890543997BF955D4B3DDC73</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">0028E50E838366815B2AAEBDA6471DCDED7F9521167C71A4E16D3382EF53FC313A844BE6752E3111ADD08CDA1AE2B1A2FF354EC37CDC6581A7D68E548A8A9EEDD3</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">00682B3608B67CAB621888251A9B0CA20B82FCAD5AC7B8353D4CF635FBA59A5098C6B1760B1E4D86CA995462979466358E</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">00750B327EFC23FBEE815114F2E63450DC5AE3615B33E29D74BFB72A400203B155</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">0005A0859BD1A3554D449E8DF79D1F3B9A2A8C5CCAF2D78C8D2491C681547C82A7CCF54EF152D3C860D0F183FDAD98A221A6DF5564B9A93387AAA30ED199701082</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">005BC244558EBD084F69F6D5F262BE93C39D15655A181D7452FCB0D67157DA1030F3363609C7695827F1B6FF8F042085C2</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">00F4C186644B6AB2D5201E1B3DBE9F4641B0D23E84BE42C1D5A821DBEC714577E453F15AE8CE5B2BB9B292C4E1155562CB</string>
    <string name="ai_class_my_reason_option_bad">讲得不好</string>
    <string name="ai_class_my_reason_option_easy">太简单了</string>
    <string name="ai_class_my_reason_option_hard">太难了</string>
    <string name="ai_class_my_reason_option_not_other">其他原因</string>
    <string name="ai_class_my_reason_option_not_ready">暂时不方便</string>
    <string name="ai_class_my_reason_subtitle">小斩会根据你的反馈更完善地改进内容</string>
    <string name="ai_class_my_reason_title">为什么退出？</string>
    <string name="daka_image_pick_up_photo_album">相册</string>
    <string name="daka_image_pick_up_photo_cancel">取消</string>
    <string name="daka_image_pick_up_photo_take">拍照</string>
    <string name="daka_page_word_list_mean">释义</string>
    <string name="daka_page_word_list_word">单词</string>
    <string name="daka_page_word_list_wrong_count">错次</string>
    <string name="fm_default_content_desc">null</string>
    <string name="fm_start_tip_count">您会听到%d个单词</string>
    <string name="fm_start_tip_time">大约需要%d分钟</string>
    <string name="photo_cancel">取消</string>
    <string name="photo_pick">相册</string>
    <string name="photo_take">拍照</string>
    <string name="userinfo_edit_by_category_hint">通过类别查找</string>
    <string name="userinfo_edit_school_type_college">大学</string>
    <string name="userinfo_edit_school_type_high">高中</string>
    <string name="userinfo_edit_school_type_high_vocation">职高</string>
    <string name="userinfo_edit_school_type_middle">初中</string>
    <string name="userinfo_edit_school_type_primary">小学</string>
    <string name="userinfo_edit_search_title">搜索学校</string>
    <string name="walk_listen_speed_100x">1.0x</string>
    <string name="walk_listen_speed_125x">1.25x</string>
    <string name="walk_listen_speed_150x">1.5x</string>
    <string name="walk_listen_speed_50x">0.5x</string>
    <string name="walk_listen_speed_75x">0.75x</string>
</resources>