<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:tag="layout/walk_listen_speed_window_0"
    android:background="@drawable/word_list_sort_window_bg"
    android:paddingLeft="16dp"
    android:paddingTop="4dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/s_50"
        android:tag="binding_1"
        android:text="@string/walk_listen_speed_50x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/style_walk_listen_speed"/>
    <TextView
        android:id="@+id/s_75"
        android:tag="binding_2"
        android:text="@string/walk_listen_speed_75x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_50"
        style="@style/style_walk_listen_speed"/>
    <TextView
        android:id="@+id/s_100"
        android:tag="binding_3"
        android:text="@string/walk_listen_speed_100x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_75"
        style="@style/style_walk_listen_speed"/>
    <TextView
        android:id="@+id/s_125"
        android:tag="binding_4"
        android:text="@string/walk_listen_speed_125x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_100"
        style="@style/style_walk_listen_speed"/>
    <TextView
        android:id="@+id/s_150"
        android:tag="binding_5"
        android:text="@string/walk_listen_speed_150x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_125"
        style="@style/style_walk_listen_speed"/>
</androidx.constraintlayout.widget.ConstraintLayout>
