<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/ai_class_quit_reason_dialog_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/titleBg"
        android:background="@color/main_color_common_background"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ai_class_mg_reason"
        app:layout_constraintBottom_toBottomOf="@+id/titleBg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleBg"/>
    <ImageView
        android:id="@+id/closed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_ai_class_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/main_color_main_word"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/ai_class_my_reason_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closed"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/main_color_word_b8"
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ai_class_my_reason_subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <View
        android:id="@+id/option_bg"
        android:background="@color/main_color_white"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        app:layout_constraintTop_toBottomOf="@+id/titleBg"/>
    <TextView
        android:gravity="center"
        android:id="@+id/hard"
        android:background="@drawable/bt_aiclass_my_reason"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8.5dp"
        android:text="@string/ai_class_my_reason_option_hard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/easy"
        app:layout_constraintTop_toTopOf="@+id/option_bg"/>
    <TextView
        android:gravity="center"
        android:id="@+id/easy"
        android:background="@drawable/bt_aiclass_my_reason"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="22dp"
        android:text="@string/ai_class_my_reason_option_easy"
        app:layout_constraintLeft_toRightOf="@+id/hard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hard"/>
    <TextView
        android:gravity="center"
        android:id="@+id/bad"
        android:background="@drawable/bt_aiclass_my_reason"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8.5dp"
        android:text="@string/ai_class_my_reason_option_bad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/not_ready"
        app:layout_constraintTop_toBottomOf="@+id/hard"/>
    <TextView
        android:gravity="center"
        android:id="@+id/not_ready"
        android:background="@drawable/bt_aiclass_my_reason"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="22dp"
        android:text="@string/ai_class_my_reason_option_not_ready"
        app:layout_constraintLeft_toRightOf="@+id/bad"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bad"/>
    <TextView
        android:gravity="center"
        android:id="@+id/other"
        android:background="@drawable/bt_aiclass_my_reason"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="22dp"
        android:text="@string/ai_class_my_reason_option_not_other"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bad"/>
</androidx.constraintlayout.widget.ConstraintLayout>
