<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/main_color_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/take"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/photo_take"/>
    <View
        android:background="@color/main_color_weak_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/pick"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/photo_pick"/>
    <View
        android:background="@color/main_color_weak_bg"
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/cancel"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/photo_cancel"/>
</LinearLayout>
