<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_white_small_corner"
    android:layout_width="match_parent"
    android:layout_height="@dimen/fm_word_card_height">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fm_logo_normal_default"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/fm_default_content_desc"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <View
            android:id="@+id/fm_start_divider"
            android:background="@color/main_color_strong_divider"
            android:layout_width="1px"
            android:layout_height="16dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="10dp"
            android:textColor="@color/main_color_word_7e"
            android:gravity="right"
            android:id="@+id/fm_start_tip_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/fm_start_tip_count"
            android:layout_toLeftOf="@+id/fm_start_divider"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="10dp"
            android:textColor="@color/main_color_word_7e"
            android:id="@+id/fm_start_tip_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/fm_start_tip_time"
            android:layout_toRightOf="@+id/fm_start_divider"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
