<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_pick_up_school_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="14sp"
        android:textColor="@color/main_color_word_b8"
        android:gravity="center"
        android:id="@+id/search"
        android:tag="binding_1"
        android:background="@drawable/edit_school_search_bg"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:text="@string/userinfo_edit_search_title"
        android:drawableLeft="@drawable/ic_edit_school_search"
        android:drawablePadding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/main_color_word_b8"
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="76dp"
        android:text="@string/userinfo_edit_by_category_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/college"
        android:tag="binding_2"
        android:background="@color/main_color_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/userinfo_edit_school_type_college"
        app:layout_constraintTop_toBottomOf="@+id/hint"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/high_vocation"
        android:tag="binding_3"
        android:background="@color/main_color_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/userinfo_edit_school_type_high_vocation"
        app:layout_constraintTop_toBottomOf="@+id/college"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/high"
        android:tag="binding_4"
        android:background="@color/main_color_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/userinfo_edit_school_type_high"
        app:layout_constraintTop_toBottomOf="@+id/high_vocation"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/middle"
        android:tag="binding_5"
        android:background="@color/main_color_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/userinfo_edit_school_type_middle"
        app:layout_constraintTop_toBottomOf="@+id/high"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/main_color_main_word"
        android:gravity="center"
        android:id="@+id/primary"
        android:tag="binding_6"
        android:background="@color/main_color_white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/userinfo_edit_school_type_primary"
        app:layout_constraintTop_toBottomOf="@+id/middle"/>
    <View
        android:background="@color/main_color_weak_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/college"/>
    <View
        android:background="@color/main_color_weak_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_vocation"/>
    <View
        android:background="@color/main_color_weak_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high"/>
    <View
        android:background="@color/main_color_weak_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
