<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_bg"
    android:tag="layout/activity_pick_photo_dialog_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/container"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:translationY="208dp">
        <TextView
            android:textSize="16sp"
            android:textColor="#ff283044"
            android:gravity="center"
            android:id="@+id/take_photo"
            android:tag="binding_1"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/daka_image_pick_up_photo_take"/>
        <View
            android:background="#66c0c8d4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#ff283044"
            android:gravity="center"
            android:id="@+id/album"
            android:tag="binding_2"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/daka_image_pick_up_photo_album"/>
        <View
            android:background="#66c0c8d4"
            android:layout_width="match_parent"
            android:layout_height="17dp"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#ff283044"
            android:gravity="center"
            android:id="@+id/cancel"
            android:tag="binding_3"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/daka_image_pick_up_photo_cancel"/>
    </LinearLayout>
</FrameLayout>
